# bachelor_lab

./: .gitignore  CMakeLists.txt  Makefile  append_result.js  build_run_send.ps1  final_gaps.json  gaps.json  lab  loop.ps1  mobj_ga_shellsort.json  result.json  result_shellsort.json  result_shellsort.txt  run_send.ps1  send_result.js  simpson_gaps.json  small_gaps.json  sobj_ga_shellsort.json  tail_gaps.json  transform_result.js  transform_results.js
lib/: json.hpp  pdqsort.hpp  pdqsort2.hpp
misc/: all_distributions_criterion.py  cleanup_results.js  fixed_distribution_fixed_criterion_plot.py  fixed_distribution_fixed_size.py  make_tables.js
res/: bench_results_1024  bench_results_128  bench_results_8192
src/: algorithms.hpp  array_utils.hpp  benchmark_algorithms.hpp  benchmarks.hpp  classic_algorithms.hpp  custom_algorithms.hpp  cycles.hpp  db_client.hpp  element.hpp  elements.hpp  fitness.hpp  ga_shellsort.hpp  gaps.hpp  genetic.hpp  genetic_algorithm.hpp  inversion_utils.hpp  iterator_utils.hpp  json_serializers.hpp  main.cpp  mobj_ga_shellsort.hpp  pass.hpp  random_utils.hpp  sobj_ga_shellsort.hpp  solution.hpp  sorting_algorithm.hpp  statistics.hpp  stats.hpp  test_data.hpp
